<resources>
    <string name="app_name">玩安卓</string>
    <string name="WanAndroid">WanAndroid</string>
    <string name="hello_world">hello_world</string>

    <!--登录-->
    <string name="wan_android_login">WanAndroid登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="account_hint">请填写账号</string>
    <string name="password_hint">请填写密码</string>
    <string name="login">登录</string>

    <!--发现-->
    <string name="wenda">每日一问</string>
    <string name="welfare">福利</string>
    <string name="view">自定义view</string>
    <string name="square">广场</string>
    <string name="more">更多</string>

    <!--我的-->
    <string name="jifen">积分</string>
    <string name="settings">设置</string>
    <string name="collect">收藏</string>
    <string name="share">分享</string>

    //网页菜单栏
    <string name="picture_has_save_to">已保存至 %s</string>
    <string name="actionbar_webview_share">分享</string>
    <string name="actionbar_webview_cope">复制链接</string>
    <string name="actionbar_webview_open">浏览器打开</string>
    <string name="actionbar_webview_refresh">刷新</string>
    <string name="actionbar_webview_collect">添加到收藏</string>

    //网络问题
    <string name="net_error">当前网络不可用，请检查你的网络设置</string>
    <string name="net_not_login_error">操作失败，请登录或检查你的网络设置</string>


    <string name="by_string_try_load">加载失败,点击重试</string>
    <string name="by_string_loading">努力加载中…</string>
    <string name="by_string_empty">未找到相关内容</string>
</resources>
