<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Imfondof"
            android:textSize="20dp" />

    </RelativeLayout>

    <TextView
        style="@style/ItemTextViewStyle"
        android:layout_marginTop="10dp"
        android:text="@string/jifen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/ItemTextViewStyle"
            android:layout_marginTop="10dp"
            android:text="@string/share" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:background="@color/gray" />

        <TextView
            style="@style/ItemTextViewStyle"
            android:text="@string/collect" />
    </LinearLayout>

    <TextView
        style="@style/ItemTextViewStyle"
        android:layout_marginTop="10dp"
        android:text="@string/settings" />

</LinearLayout>